07.05.2017 - Added fixed height for callToActionBtn inside modal, it was causing issues on Safari and webkit devices

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1883,7 +1883,8 @@ form {
       height: auto;
       cursor: -webkit-zoom-out; }
   .modal-container-outer .modal-container-inner .modal-container-call-to-action {
-    padding-bottom: 30px; }
+    padding-bottom: 30px;
+    height: 20px; }
     @media screen and (max-width: 499px) {
       .modal-container-outer .modal-container-inner .modal-container-call-to-action {
         font-size: .65em; } }
